--- a/5-miaoma-monitor-demo/packages/browser/package.json
+++ b/5-miaoma-monitor-demo/packages/browser/package.json
@@ -1,7 +1,22 @@
 {
   "name": "@miaoma/monitor-sdk-browser",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/cjs/index.js",
+  "module": "build/esm/index.mjs",
+  "types": "build/types/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./build/types/index.d.ts",
+        "default": "./build/esm/index.mjs"
+      },
+      "require": {
+        "types": "./build/types/index.d.ts",
+        "default": "./build/cjs/index.js"
+      }
+    }
+  },
   "scripts": {
     "build:watch": "concurrently \"pnpm run build:watch:transpile\" \"pnpm run build:watch:types\"",
     "build:watch:transpile": "tsup --watch",
