SDK包基本完成

--- a/5-miaoma-monitor-demo/demos/vanilla/package.json
+++ b/5-miaoma-monitor-demo/demos/vanilla/package.json
@@ -8,6 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@miaoma/monitor-sdk-browser": "workspace:*"
+  },
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
