--- a/5-miaoma-monitor-demo/packages/browser/package.json
+++ b/5-miaoma-monitor-demo/packages/browser/package.json
@@ -28,5 +28,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@miaoma/monitor-sdk-core": "workspace:*",
+    "@miaoma/monitor-sdk-browser-utils": "workspace:*"
+  }
 }
