--- a/5-miaoma-monitor-demo/packages/core/package.json
+++ b/5-miaoma-monitor-demo/packages/core/package.json
@@ -1,12 +1,32 @@
 {
-  "name": "@miaoma/monitor-sdk-core",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "@miaoma/monitor-sdk-core",
+    "version": "1.0.0",
+    "main": "build/cjs/index.js",
+    "module": "build/esm/index.mjs",
+    "types": "build/types/index.d.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "import": {
+                "types": "./build/types/index.d.ts",
+                "default": "./build/esm/index.mjs"
+            },
+            "require": {
+                "types": "./build/types/index.d.ts",
+                "default": "./build/cjs/index.js"
+            }
+        }
+    },
+    "scripts": {
+        "build:watch": "concurrently \"pnpm run build:watch:transpile\" \"pnpm run build:watch:types\"",
+        "build:watch:transpile": "tsup --watch",
+        "build:watch:types": "tsc -p tsconfig.types.json --watch",
+        "build": "pnpm run build:transpile && pnpm run build:types",
+        "build:transpile": "tsup",
+        "build:types": "tsc -p tsconfig.types.json"
+    },
+    "keywords": [],
+    "author": "Heyi",
+    "license": "ISC",
+    "description": ""
 }
